# dynamic_r_index

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  additional__information__updating__r__index_8hpp_source.html  all_8hpp_source.html  annotated.html  annotated_dup.js  c__array_8hpp_source.html  classes.html  classstool_1_1TimeDebug-members.html  classstool_1_1TimeDebug.html  classstool_1_1dynamic__r__index_1_1CArray-members.html  classstool_1_1dynamic__r__index_1_1CArray.html  classstool_1_1dynamic__r__index_1_1CArray.js  classstool_1_1dynamic__r__index_1_1CArray_a09cec074943027e07970d540befb7126_cgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a09cec074943027e07970d540befb7126_cgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a09cec074943027e07970d540befb7126_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a09cec074943027e07970d540befb7126_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a0de76f5db818ff564e1745987cea8b2f_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a0de76f5db818ff564e1745987cea8b2f_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a1cf15a66d943d3d77e17473337e3f880_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a1cf15a66d943d3d77e17473337e3f880_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a3c9e9b1dab8a432b48924f235ae50190_cgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a3c9e9b1dab8a432b48924f235ae50190_cgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a3c9e9b1dab8a432b48924f235ae50190_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a3c9e9b1dab8a432b48924f235ae50190_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a74e06c8b128c1a710ec716174d7f9416_cgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a74e06c8b128c1a710ec716174d7f9416_cgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a7bf4d5a5f779ee447179dc767dbcf936_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a7bf4d5a5f779ee447179dc767dbcf936_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a8c98d412f2542a97a5563c827df983fd_cgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a8c98d412f2542a97a5563c827df983fd_cgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a8c98d412f2542a97a5563c827df983fd_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a8c98d412f2542a97a5563c827df983fd_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_a9c1ec3d8a42e0de773e49413bb7c0f7a_icgraph.map  classstool_1_1dynamic__r__index_1_1CArray_a9c1ec3d8a42e0de773e49413bb7c0f7a_icgraph.md5  classstool_1_1dynamic__r__index_1_1CArray_acdfbaf33871553c5dcd1127e0ca7a5c9_cgraph.map  classstool_1_1dynamic__r__index_1_1CArray_acdfbaf33871553c5dcd1127e0ca7a5c9_cgraph.md5  (+799 more)
docs/html/: additional__information__updating__r__index_8hpp_source.html  annotated.html  annotated_dup.js  btree_8hpp_source.html  btree__include_8hpp_source.html  btree__node_8hpp_source.html  c__array_8hpp_source.html  class_dynamic_s_a.html  classes.html  classstool_1_1_time_debug-members.html  classstool_1_1_time_debug.html  classstool_1_1dynamic__r__index_1_1_c_array-members.html  classstool_1_1dynamic__r__index_1_1_c_array.html  classstool_1_1dynamic__r__index_1_1_dynamic_b_w_t-members.html  classstool_1_1dynamic__r__index_1_1_dynamic_b_w_t.html  classstool_1_1dynamic__r__index_1_1_dynamic_b_w_t.js  classstool_1_1dynamic__r__index_1_1_dynamic_f_m_index-members.html  classstool_1_1dynamic__r__index_1_1_dynamic_f_m_index.html  classstool_1_1dynamic__r__index_1_1_dynamic_i_s_a-members.html  classstool_1_1dynamic__r__index_1_1_dynamic_i_s_a.html  classstool_1_1dynamic__r__index_1_1_dynamic_partial_s_a-members.html  classstool_1_1dynamic__r__index_1_1_dynamic_partial_s_a.html  classstool_1_1dynamic__r__index_1_1_dynamic_partial_s_a.js  classstool_1_1dynamic__r__index_1_1_dynamic_phi-members.html  classstool_1_1dynamic__r__index_1_1_dynamic_phi.html  (+224 more)
examples/: ab.txt  command.tsv  count_query.txt  delete_query.txt  insert_query.txt  locate_query.txt
experiment/: build_dfm.sh  build_dr.sh  chr.sh  chr2.sh  locate_query.sh  locate_query_dfm.sh  memory.sh  update_query.sh  update_query_dfm.sh
include/: all.hpp  dynamic_fm_index.hpp  dynamic_r_index.hpp  line_query.hpp  time_debug.hpp  tools.hpp
main/: build_bwt_main.cpp  build_fm_index_main.cpp  build_r_index_main.cpp  build_rev_bwt_main.cpp  counter_example_main.cpp  fm_index_test_main.cpp  generate_query_main.cpp  lighweight_query_main.cpp  online_reverse_bwt_main.cpp  performance_main.cpp  print_index_main.cpp  query_main.cpp  r_index_test_main.cpp  temporary_r_index.hpp  tmp_test_main.cpp
main/old/: count_main.cpp  (+4 more)
misc/: tables.xlsx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  (+39 more)
test/: CMakeLists.txt  counter_example_main.cpp  deletion_demo_main.cpp  dynamic_fm_index_test.hpp  dynamic_r_index_test.hpp  fm_index_performance_test.hpp  fm_index_test_main.cpp  generate_query_main.cpp  insertion_demo_main.cpp  lighweight_query_main.cpp  online_reverse_bwt_main.cpp  performance_main.cpp  pseudocode_main.cpp  r_index_performance_test.hpp  r_index_test_main.cpp  tmp_test_main.cpp  window_test.hpp
test/include/: dynamic_fm_index_test.hpp  dynamic_r_index_snapshot_for_deletion.hpp  dynamic_r_index_snapshot_for_insertion.hpp  dynamic_r_index_test.hpp  fm_index_performance_test.hpp  naive_dynamic_r_index.hpp  naive_dynamic_string.hpp  naive_dynamic_string_x.hpp  naive_operations.hpp  r_index_performance_test.hpp  temporary_r_index.hpp  window_test.hpp
test/old/: build_test_main.cpp  count_main.cpp  dynamic_rindex_performance_main.cpp  fm_index_main.cpp  lcp_main.cpp  old_btree_test_main.cpp  online_reverse_bwt_main.cpp  reorder_test_main.cpp  tmp_test_main.cpp
(+77 files in other folders)
